# uno

./: .gitignore  LICENSE.txt  Makefile  README.md  coverage.cfg  description.rst  random_game.py  setup.cfg  uno.py  uno_pgz.py  uno_tests.py
tests/: test_.py  test_card.py  test_game.py  test_player.py
uno/: __main__.py  ai.py  card.py  const.py  data.py  game.py  pgz_ai.py  player.py  utils.py
