# coding: utf-8
[metadata]
name = uno
version = 0.1.0
description = A Python implementation of the card game Uno
long_description = file: description.rst
author = Ben Nuttall
author_email = ben@bennuttall.com
url = https://github.com/bennuttall/uno
project_urls =
    Source Code = https://github.com/bennuttall/uno
    Issue Tracker = https://github.com/bennuttall/uno/issues
keywords = uno, card game
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment
    License :: OSI Approved :: BSD License
license_files = LICENSE.txt

[options]
packages = find:
python_requires = >=3.5
install_requires =
    setuptools

[options.extras_require]
test =
    pytest
    pylint
    coverage

[options.entry_points]
console_scripts =
    uno = uno.pgz:main
